--- a/src/asset/css/reset.css
+++ b/src/asset/css/reset.css
@@ -4,6 +4,7 @@
 }
 body {
     -webkit-text-size-adjust:none;
+    font-size: .3rem;
     background: #fff;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,PingFang SC,Source Han Sans CN,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif;
 }
