--- a/src/components/styles/logoHeader.less
+++ b/src/components/styles/logoHeader.less
@@ -14,5 +14,11 @@
     }
     .my-books{
         margin-right: .3rem;
+        font-size: .24rem;
+        color: #c81c17;
+        .iconfont{
+            margin-right: .1rem;
+            font-size: .3rem;
+        }
     }
 }
