--- a/src/asset/css/common.less
+++ b/src/asset/css/common.less
@@ -5,7 +5,11 @@
     right: 0;
     bottom: 0;
     overflow: hidden;
+    -webkit-overflow-scrolling: touch;
     font-size: .24rem;
+}
+.app{
+    height: 100%;
 }
 
 .page{
@@ -17,6 +21,7 @@
     overflow: scroll;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
+    box-sizing: border-box;
 }
 
 .fade-in-right-enter {
