--- a/src/components/styles/header.less
+++ b/src/components/styles/header.less
@@ -1,5 +1,6 @@
 .header{
     position: fixed;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100%;
@@ -19,7 +20,7 @@
     }
     h3{
         line-height: .9rem;
-        font-size: .34rem;
+        font-size: .3rem;
         font-weight: normal;
         text-align: center;
     }
