--- a/src/components/styles/chapterList.less
+++ b/src/components/styles/chapterList.less
@@ -7,6 +7,9 @@
             line-height: .4rem;
             padding: .2rem 0;
             color: #666;
+            &.active{
+                color: red;
+            }
         }
     }
 }
